crates/solidity/testing/snapshots/bindings_output/contracts/state_var_override/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
    ╭─[input.sol:10:25]
    │
 10 │     Bar public override foo;
    │                         ─┬─  
    │                          ╰─── Error occurred here.
────╯
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:12:5]
    │
 12 │ ╭─▶     function test() internal view {
    ┆ ┆   
 16 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ interface IFoo {
    │           ──┬─  
    │             ╰─── name: 1
  2 │     function foo() external returns (uint, uint);
    │              ─┬─  
    │               ╰─── name: 2
    │ 
  5 │ contract Test is IFoo {
    │          ──┬─    ──┬─  
    │            ╰─────────── name: 3
    │                    │   
    │                    ╰─── ref: 1
  6 │     struct Bar {
    │            ─┬─  
    │             ╰─── name: 4
  7 │         uint x;
    │              ┬  
    │              ╰── name: 5
  8 │         uint y;
    │              ┬  
    │              ╰── name: 6
    │ 
 10 │     Bar public override foo;
    │     ─┬─        ────┬───  
    │      ╰─────────────────── ref: 4
    │                    │     
    │                    ╰───── name: 7
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │   ╭───▶ interface IFoo {
  2 │   │         function foo() external returns (uint, uint);
    │   │     ─────────────────────────┬────────────────────────  
    │   │                              ╰────────────────────────── definiens: 2
  3 │ │ ├───▶ }
    │ │ │         
    │ │ ╰───────── definiens: 1
  4 │ ╭─────▶ 
    ┆ ┆   ┆   
  6 │ │   ╭─▶     struct Bar {
  7 │ │   │           uint x;
    │ │   │   ────────┬───────  
    │ │   │           ╰───────── definiens: 5
  8 │ │   │           uint y;
    │ │   │   ────────┬───────  
    │ │   │           ╰───────── definiens: 6
  9 │ │   ├─▶     }
    │ │   │           
    │ │   ╰─────────── definiens: 4
 10 │ │           Bar public override foo;
    │ │       ──────────────┬──────────────  
    │ │                     ╰──────────────── definiens: 7
    ┆ ┆       
 17 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 3
────╯
